<resources>
    <string name="app_name">ColorNote</string>

    <!--Trung-->
    <string name="material_calendar_monday">Mon</string>
    <string name="material_calendar_tuesday">Tue</string>
    <string name="material_calendar_wednesday">Wed</string>
    <string name="material_calendar_thursday">Thu</string>
    <string name="material_calendar_friday">Fri</string>
    <string name="material_calendar_saturday">Sar</string>
    <string name="material_calendar_sunday">Sun</string>
    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>
    <string name="app_calendar">Calendar</string>
    <!--Trung-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_description">Channel description</string>


    <!--    tuyen-->


    <string-array name="spnLeft_Archive">
        <item>All</item>
        <item>Notes</item>
        <item>Calendar</item>
    </string-array>
    <string-array name="spnRight_Archive">
        <item>All</item>
        <item>Normal</item>
        <item>Archived</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="online_sync">Online Sync</string>
    <string name="general">Genaral</string>
    <string name="sort">Sort</string>
    <string name="reminder">Reminder</string>
    <string name="calendar">Calendar</string>
    <string name="about">About</string>


    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!--    tuyen-->
    <!--   tuyen sêttting -->
    <string name="online_backup">Online Backup</string>
    <string name="default_screen">Default Screen</string>
    <string name="default_color">Default color</string>
    <string name="default_font_size">Default font size</string>
    <string name="default_sort_order">Default notes sort order</string>
    <string name="default_sort_color">Default order in color</string>
    <string name="app_vesion">App version : 1.0.0</string>
    <string name="color_note_FAQ">App version : 1.0.0</string>


    <string name="remind_me_for_bed_time">remind_me_for_bed_time</string>
    <string name="remind_for_bed_time">Remind me for bed time</string>
    <string name="limit_data_usage">prefs_limit_data_usage</string>
    <string name="stream_video">Only stream HD video on Wi-Fi</string>
    <string name="limit_mobile_usage">Limit mobile data usage</string>
    <string name="double_tap_to_seek">Double-tap to seek</string>
    <string name="pref_seek_val">pref_seek_val</string>
    <string name="seconds">seconds</string>
    <string name="uploads">Uploads</string>
    <string name="pref_uploads">pref_uploads</string>
    <string name="specify_network_prefs">Specify network preferences for uploads</string>
    <string name="prefs_restricted_mode">prefs_restricted_mode</string>
    <string name="restricated_mode">Restricted Mode can help to hide videos with potentially mature content.No filter is 100% accurate, but it should help you to avoid most of this type of content.</string>
    <string name="restricated_mode_description">Restricted Mode</string>
    <string name="prefs_enable_stats">prefs_enable_stats</string>
    <string name="enable_stats">Enable stats for nerds</string>
    <string-array name="default_screen_entries">
        <item>Notes</item>
        <item>Calendar</item>
    </string-array>
    <string-array name="default_font_size_entries">
        <item>Tiny</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>
    <string-array name="default_sort_order_entries">
        <item>by modified time</item>
        <item>alphabetically</item>
        <item>by color</item>
        <item>by reminder time</item>
        <item>Last used sort order</item>
    </string-array>
    <string-array name="default_sort_color_entries">
        <item>by modified time</item>
        <item>alphabetically</item>
    </string-array>


    <string-array name="pref_upload_quality_entries">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>Original</item>
    </string-array>

    <string-array name="pref_remind_me_to_take_a_break">
        <item>1 hours</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>5 hours</item>
        <item>10 hours</item>
    </string-array>

    <string-array name="pref_seek_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>

    <string-array name="pref_duration">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_uploads">
        <item>Only when on Wi-Fi</item>
        <item>On any network</item>
    </string-array>

    <!--    tuyen setting-->
    <!-- Tan-->
    <string name="facebook_app_id">556326899021162</string>
    <string name="fb_login_protocol_scheme">fb556326899021162</string>

</resources>